--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "A place for planning D&D campaigns.",
   "main": "index.js",
   "scripts": {
-    "build": "gulp build"
+    "build": "gulp build",
+    "watch": "gulp watch",
+    "serve": "http-server _site -p8000 -c-1",
+    "dev": "npm run build && concurrently \"npm:watch\" \"npm:serve\""
   },
   "repository": {
     "type": "git",
@@ -18,8 +21,11 @@
   "homepage": "https://gitlab.com/TickleThePanda/dnd-planning#README",
   "devDependencies": {
     "@11ty/eleventy": "^0.6.0",
+    "concurrently": "^4.1.0",
     "gulp": "^4.0.0",
     "gulp-less": "^4.0.1",
-    "gulp-shell": "^0.6.5"
-  }
+    "gulp-shell": "^0.6.5",
+    "http-server": "^0.11.1"
+  },
+  "dependencies": {}
 }
