--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "gulp": "^4.0.0",
     "gulp-less": "^4.0.1",
     "gulp-shell": "^0.6.5",
-    "http-server": "^0.11.1"
+    "http-server": "^0.11.1",
+    "markdown-it": "^8.4.2",
+    "markdown-it-anchor": "^5.0.2"
   },
   "dependencies": {}
 }
