--- a/package.json
+++ b/package.json
@@ -20,18 +20,17 @@
   },
   "homepage": "https://gitlab.com/TickleThePanda/dnd-planning#README",
   "devDependencies": {
-    "@11ty/eleventy": "^0.6.0",
-    "concurrently": "^4.1.0",
-    "gulp": "^4.0.0",
+    "@11ty/eleventy": "^0.9.0",
+    "concurrently": "^5.0.0",
+    "gulp": "^4.0.2",
     "gulp-less": "^4.0.1",
-    "gulp-shell": "^0.6.5",
+    "gulp-shell": "^0.7.1",
     "http-server": "^0.11.1",
-    "markdown-it": "^8.4.2",
-    "markdown-it-anchor": "^5.0.2"
-  },
-  "dependencies": {
+    "markdown-it": "^10.0.0",
+    "markdown-it-anchor": "^5.2.5",
     "hyphenation.en-gb": "^0.2.1",
     "hypher": "^0.2.5",
-    "jsdom": "^15.2.0"
-  }
+    "jsdom": "^15.2.1"
+  },
+  "dependencies": {}
 }
