--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "gulp build",
     "watch": "gulp watch",
-    "serve": "http-server _site -p8000 -c-1",
+    "serve": "http-server _site -p8000 -c-1 -s",
     "dev": "npm run build && concurrently \"npm:watch\" \"npm:serve\""
   },
   "repository": {
@@ -20,17 +20,17 @@
   },
   "homepage": "https://gitlab.com/TickleThePanda/dnd-planning#README",
   "devDependencies": {
-    "@11ty/eleventy": "^0.9.0",
-    "concurrently": "^5.0.0",
+    "@11ty/eleventy": "^0.10.0",
+    "concurrently": "^5.2.0",
     "gulp": "^4.0.2",
     "gulp-less": "^4.0.1",
     "gulp-shell": "^0.7.1",
-    "http-server": "^0.11.1",
-    "markdown-it": "^10.0.0",
-    "markdown-it-anchor": "^5.2.5",
+    "http-server": "^0.12.3",
     "hyphenation.en-gb": "^0.2.1",
     "hypher": "^0.2.5",
-    "jsdom": "^15.2.1"
+    "jsdom": "^15.2.1",
+    "markdown-it": "^10.0.0",
+    "markdown-it-anchor": "^5.2.5"
   },
   "dependencies": {}
 }
