--- a/package.json
+++ b/package.json
@@ -32,5 +32,7 @@
     "markdown-it": "^10.0.0",
     "markdown-it-anchor": "^5.2.5"
   },
-  "dependencies": {}
+  "dependencies": {
+    "slugify": "^1.4.0"
+  }
 }
