--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "homepage": "https://gitlab.com/TickleThePanda/dnd-planning#README",
   "devDependencies": {
-    "@11ty/eleventy": "^0.11.0-beta.4",
+    "@11ty/eleventy": "^1.0.1",
     "concurrently": "^5.2.0",
     "gulp": "^4.0.2",
     "gulp-less": "^4.0.1",
