--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@11ty/eleventy": "^1.0.1",
     "concurrently": "^5.2.0",
+    "eleventy-plugin-toc": "^1.1.5",
     "gulp": "^4.0.2",
     "gulp-less": "^4.0.1",
     "gulp-shell": "^0.7.1",
